--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,8 @@
 	<meta name="theme-color" content="#000000">
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+
 </head>
 <body>
 	<noscript> You need to enable JavaScript to run this app. </noscript>
